; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_photon.c_gui_mch_set_foreground.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_photon.c_gui_mch_set_foreground.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32, i32, i32 }

@Ph_WM_TOFRONT = common dso_local global i32 0, align 4
@Ph_WM_EVSTATE_FFRONT = common dso_local global i32 0, align 4
@gui = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gui_mch_set_foreground() #0 {
  %1 = alloca %struct.TYPE_5__, align 4
  %2 = call i32 @memset(%struct.TYPE_5__* %1, i32 0, i32 12)
  %3 = load i32, i32* @Ph_WM_TOFRONT, align 4
  %4 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 2
  store i32 %3, i32* %4, align 4
  %5 = load i32, i32* @Ph_WM_EVSTATE_FFRONT, align 4
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 1
  store i32 %5, i32* %6, align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gui, i32 0, i32 0), align 4
  %8 = call i32 @PtWidgetRid(i32 %7)
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = call i32 @PtForwardWindowEvent(%struct.TYPE_5__* %1)
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @PtWidgetRid(i32) #1

declare dso_local i32 @PtForwardWindowEvent(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
